app/globals.css
@import "tailwindcss";
@plugin "flowbite-react/plugin/tailwindcss";
@source "../.flowbite-react/class-list.json";
@import "./theme.css";

:root {
  --background: #ffffff;
  --foreground: #171717;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

@media (max-width: 375px) {
  .leaflet-top.leaflet-right .leaflet-control-zoom {
    margin-top: 120px !important;
  }
}

body {
  background: var(--background);
  color: var(--foreground);
  font-family: Arial, Helvetica, sans-serif;
}

.scrollbar-hide::-webkit-scrollbar {
  display: none;
}

/* For IE, Edge and Firefox */
.scrollbar-hide {
  -ms-overflow-style: none; /* IE and Edge */
  scrollbar-width: none; /* Firefox */
}

/* Leaflet Marker Clusters CSS */
.marker-cluster-small {
  background-color: var(--color-primary-200) !important;
  color: var(--color-black) !important;
}
.marker-cluster-small div {
  background-color: var(--color-primary-100) !important;
  color: var(--color-black) !important;
}
.marker-cluster-medium {
  background-color: var(--color-primary-500) !important;
  color: var(--color-accent-50) !important;
}
.marker-cluster-medium div {
  background-color: var(--color-primary-400) !important;
  color: var(--color-accent-50) !important;
}
.marker-cluster-large {
  background-color: var(--color-accent-500) !important;
  color: var(--color-black) !important;
}
.marker-cluster-large div {
  background-color: var(--color-accent-400) !important;
  color: var(--color-black) !important;
}

